# itelebot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  github_webhook.sh  main.py  pyproject.toml  requirements.txt  run_service.sh  setup.py
bot/commands/admin/: commands.py
bot/core/db/: init_db.py
bot/core/pydantic/: config.py
bot/handlers/: daily.py  restrictions.py
bot/jobs/: daily_jobs.py  delete_jobs.py
bot/messages/: daily_messages.json
bot/models/: users.py
bot/repo/: users.py
bot/utils/: read_json.py
env/: .env_template
