[tool.ruff]
line-length = 160

[project]
name = "itelebot"
requires-python = "~=3.11"

version = "0.1.0"
description = ""
authors = [{name = "Arshiya khalili", email = "arshiyakhalili6@gmail.com"}]
readme = "README.md"
dependencies = [
    "python-telegram-bot[job-queue,rate-limiter]",
    "sqlalchemy",
    "pydantic-settings>=2.6.1",
    "pytz>=2024.2",
]


[tool.uv]
dev-dependencies = [
    "ruff==0.5.0",
    "pre-commit>=3.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["bot"]
